--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.3.0",
     "react-time-picker": "^7.0.0",
-    "sonner": "^1.7.4"  },
+    "sonner": "^1.7.4"
+  },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/node": "^22.12.0",
